# idle-domains

./: .ocamlformat  README.md  idle-domains.opam
.github/workflows/: workflow.yml
docs/: index.html
docs/idle-domains/: index.html
docs/idle-domains/Idle_domains/: index.html
script/: ci  common  publish-gh-pages  watch  watch-test
src/main/: Idle_domains.ml  Idle_domains.mli  dune
src/test/: Idle_domains_test.ml  dune
